--- a/Form1/Form1/Form1.csproj
+++ b/Form1/Form1/Form1.csproj
@@ -52,6 +52,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Formtin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formtin.Designer.cs">
+      <DependentUpon>Formtin.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
